# safe_mrc_device

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: safe_mrc_deviceConfig.cmake.in
examples/: demo.cpp
include/safe_mrc_device/rs485bus/: bus_detector.hpp  bus_diagnostics.hpp  crc_ccitt.h  rs485_device_collection.hpp  rs485_ring_buffer.hpp  rs485_rx_fifo.hpp  rs485_serial.hpp  rs485_tx_lifo.hpp
include/safe_mrc_device/safe_mrc/: safe_mrc.hpp  safe_mrc_component.hpp  safe_mrc_device.hpp  safe_mrc_device_collection.hpp  safe_mrc_protocol.h  safeguarder.hpp
src/rs485bus/: bus_detector.cpp  bus_diagnostics.cpp  rs485_device_collection.cpp  rs485_ring_buffer.cpp  rs485_rx_fifo.cpp  rs485_serial.cpp  rs485_tx_lifo.cpp
src/safe_mrc/: safe_mrc.cpp  safe_mrc_component.cpp  safe_mrc_device.cpp  safe_mrc_device_collection.cpp  safeguarder.cpp
test/: pressure_test_1000Hz.cpp  rs485_bus_test.cpp
